Update officers to 2018

--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -16,6 +16,98 @@
  <main>
   <div class="content-wrapper">
    <ul class="cards">
+
+    <li class="cards__card">
+      <div class="card__image"
+       style="background-image: url({% static "home/img/officers/current/SIG.com-chair.jpg" %})">
+      </div>
+
+      <div class="card__content">
+        <div class="card_heading">
+          <h3 class="card__name">Kevin Schoonover</h3>
+          <h5 class="card__titles">President</h5>
+          <h5 class="card__titles">SIG-Web Chair</h5>
+          <h5 class="card__titles">System Administrator</h5>
+        </div>
+
+        <div class="card__text">
+          Year - Junior<br>
+        </div>
+
+        <div class="card__links">
+          <a href="https://www.linkedin.com/in/schoonoverkevin/" class="acm-btn">LinkedIn</a>
+          <a href="mailto:ksyh3@mst.edu" class="acm-btn">Email</a>
+        </div>
+      </div>
+    </li>
+
+    <li class="cards__card">
+     <div class="card__image"
+      style="background-image: url({% static "home/img/officers/current/shelbyh.png" %})">
+     </div>
+     <div class="card__content">
+       <div class="card_heading">
+         <h3 class="card__name">Shelby Hayes</h3>
+         <h5 class="card__titles">Vice President</h5>
+       </div>
+      <div class="card__text">
+       Year - Senior<br>
+       {# TODO: make this start of service and put like august, 2014 #}
+      </div>
+      <div class="card__links">
+       <a href="https://www.linkedin.com/in/shelbybhayes/"
+        class="acm-btn">LinkedIn</a>
+       <a href="mailto:sbh43b@mst.edu"
+        class="acm-btn">Email</a>
+      </div>
+     </div>
+    </li>
+
+    <li class="cards__card">
+     <div class="card__image"
+      style="background-image: url({% static "home/img/officers/current/claymcginnis.png" %})">
+     </div>
+     <div class="card__content">
+       <div class="card_heading">
+         <h3 class="card__name">Clay McGinnis</h3>
+         <h5 class="card__titles">Vice President</h5>
+       </div>
+      <div class="card__text">
+       Year - Junior<br>
+       {# TODO: make this start of service and put like august, 2014 #}
+      </div>
+      <div class="card__links">
+       <a href="https://www.linkedin.com/in/claymav"
+        class="acm-btn">LinkedIn</a>
+       <a href="mailto:cmm4hf@mst.edu"
+        class="acm-btn">Email</a>
+      </div>
+     </div>
+    </li>
+
+    <li class="cards__card">
+     <div class="card__image"
+      style="background-image: url({% static "home/img/officers/current/HenryWong.jpg" %})">
+     </div>
+     <div class="card__content">
+       <div class="card_heading">
+        <h3 class="card__name">Henry Wong</h3>
+        <h5 class="card__titles">Treasurer</h5>
+        <h5 class="card__titles">SIG-Data Chair</h5>
+      </div>
+      <div class="card__text">
+       Year - Junior<br>
+       {# TODO: make this start of service and put like august, 2014 #}
+      </div>
+      <div class="card__links">
+       <a href="https://www.linkedin.com/in/henrycwong/"
+         class="acm-btn">LinkedIn</a>
+       <a href="mailto:hcwqk7@mst.edu"
+        class="acm-btn">Email</a>
+      </div>
+     </div>
+    </li>
+
     <li class="cards__card">
      <div class="card__image"
       style="background-image: url({% static "home/img/core/acm.png" %})">
@@ -23,12 +115,11 @@
      <div class="card__content">
        <div class="card_heading">
          <h3 class="card__name">Steven Giangreco</h3>
-         <h5 class="card__titles">President</h5>
+         <h5 class="card__titles">Secretary</h5>
        </div>
       <div class="card__text">
        Year - Senior<br>
        {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - SIG-Security
       </div>
       <div class="card__links">
        <a href="https://www.linkedin.com/in/steven-giangreco-42a1b5132"
@@ -40,109 +131,17 @@
     </li>
 
     <li class="cards__card">
-     <div class="card__image"
-      style="background-image: url({% static "home/img/core/acm.png" %})">
-     </div>
-     <div class="card__content">
-       <div class="card_heading">
-        <h3 class="card__name">Joseph Kuhn</h3>
-        <h5 class="card__titles">Vice President</h5>
-      </div>
-      <div class="card__text">
-       Year - Sophomore<br>
-       {# TODO: make this start of service and put like august, 2014 #}
-      </div>
-      <div class="card__links">
-       <a href="mailto:jck244@mst.edu"
-        class="acm-btn">Email</a>
-      </div>
-     </div>
-    </li>
-
-    <li class="cards__card">
-     <div class="card__image"
-      style="background-image: url({% static "home/img/officers/current/treasurer.jpg" %})">
-     </div>
-     <div class="card__content">
-       <div class="card_heading">
-        <h3 class="card__name">Katrina Ward</h3>
-        <h5 class="card__titles">Treasurer</h5>
-        <h5 class="card__titles">ACM-W President</h5>
-      </div>
-      <div class="card__text">
-       Year - PhD<br>
-       {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - ACM-W
-      </div>
-      <div class="card__links">
-       <a href="https://www.linkedin.com/in/katrina-ward-57131575/"
-         class="acm-btn">LinkedIn</a>
-       <a href="mailto:kjw26b@mst.edu"
-        class="acm-btn">Email</a>
-      </div>
-     </div>
-    </li>
-
-    <li class="cards__card">
-     <div class="card__image"
-      style="background-image: url({% static "home/img/core/acm.png" %})">
-     </div>
-     <div class="card__content">
-       <div class="card_heading">
-         <h3 class="card__name">Sara Newman</h3>
-         <h5 class="card__titles">Secretary</h5>
-       </div>
-      <div class="card__text">
-       Year - Junior<br>
-       {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - SIG-Competition
-      </div>
-      <div class="card__links">
-       <a href="https://www.linkedin.com/in/sara-newman-bb2803128/"
-         class="acm-btn">LinkedIn</a>
-       <a href="mailto:sn976@mst.edu"
-        class="acm-btn">Email</a>
-      </div>
-     </div>
-    </li>
-
-    <li class="cards__card">
-     <div class="card__image"
-      style="background-image: url({% static "home/img/officers/current/sysadmin.jpg" %})">
-     </div>
-     <div class="card__content">
-       <div class="card_heading">
-         <h3 class="card__name">Adam Evans</h3>
-         <h5 class="card__titles">System Administrator</h5>
-       </div>
-      <div class="card__text">
-       Year - Senior<br>
-       {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - SIG-Competition, SIG-Security
-      </div>
-      <div class="card__links">
-        <a href="https://www.linkedin.com/in/adam-evans-626408a8/"
-           class="acm-btn">LinkedIn</a>
-       <a href="mailto:ane3md@mst.edu"
-        class="acm-btn">Email</a>
-      </div>
-     </div>
-    </li>
-
-    <li class="cards__card">
       <div class="card__image"
-       style="background-image: url({% static "home/img/core/acm.png" %})">
+       style="background-image: url({% static "home/img/officers/current/sethkitchen.jpg" %})">
       </div>
 
       <div class="card__content">
         <div class="card_heading">
           <h3 class="card__name">Seth Kitchen</h3>
           <h5 class="card__titles">Event Coordinator</h5>
-          <h5 class="card__titles">SIG-Competition Chair</h5>
         </div>
         <div class="card__text">
           Year - Senior<br>
-          Involvement - SIG-Competition
         </div>
         <div class="card__links">
           <!--<a href="https://www.linkedin.com/in/schoonoverkevin/"
@@ -153,64 +152,17 @@
     </li>
 
     <li class="cards__card">
-      <div class="card__image"
-       style="background-image: url({% static "home/img/officers/current/SIG.com-chair.jpg" %})">
-      </div>
-
-      <div class="card__content">
-        <div class="card_heading">
-          <h3 class="card__name">Kevin Schoonover</h3>
-          <h5 class="card__titles">SIG.com Chair</h5>
-        </div>
-
-        <div class="card__text">
-          Year - Sophomore<br>
-          Involvement - SIG.com
-        </div>
-
-        <div class="card__links">
-          <a href="https://www.linkedin.com/in/schoonoverkevin/" class="acm-btn">LinkedIn</a>
-          <a href="mailto:ksyh3@mst.edu" class="acm-btn">Email</a>
-        </div>
-      </div>
-    </li>
-
-    <li class="cards__card">
-      <div class="card__image"
-       style="background-image: url({% static "home/img/officers/current/gamechair.jpg" %})">
-      </div>
-
-      <div class="card__content">
-        <div class="card_heading">
-          <h3 class="card__name">Victoria Kraemer</h3>
-          <h5 class="card__titles">SIG-Game Chair</h5>
-        </div>
-        <div class="card__text">
-          Year - Senior<br>
-          SIG - SIG-Game
-        </div>
-      <div class="card__links">
-       <!--<a href="https://www.linkedin.com/in/schoonoverkevin/"
-         class="acm-btn">LinkedIn</a>-->
-       <a href="mailto:vjkgz3@mst.edu"
-        class="acm-btn">Email</a>
-      </div>
-      </div>
-    </li>
-
-    <li class="cards__card">
      <div class="card__image"
       style="background-image: url({% static "home/img/officers/current/loungechair.jpg" %})">
      </div>
      <div class="card__content">
        <div class="card_heading">
         <h3 class="card__name">Cody Roberts</h3>
-        <h5 class="card__titles">SIG-Lounge Chair</h5>
+        <h5 class="card__titles">Event Coordinator</h5>
       </div>
       <div class="card__text">
-       Year - Sophomore<br>
+       Year - Junior<br>
        {# TODO: make this start of service and put like august, 2014 #}
-       Involvement - SIG-Game, SIG-Lounge
       </div>
       <div class="card__links">
        <!--<a href="https://www.linkedin.com/in/eric-michalak-400907137/"
@@ -220,9 +172,120 @@
       </div>
      </div>
     </li>
-   </ul>
 
-   {# Below should expand and make more info about past officers appear #}
+    <li class="cards__card">
+      <div class="card__image"
+       style="background-image: url({% static "home/img/officers/current/arisherman.jpg" %})">
+      </div>
+
+      <div class="card__content">
+        <div class="card_heading">
+          <h3 class="card__name">Ari Sherman</h3>
+          <h5 class="card__titles">SIG-Competition Chair</h5>
+        </div>
+        <div class="card__text">
+          Year - Senior<br>
+        </div>
+      <div class="card__links">
+       <a href="http://linkedin.com/in/ari-sherman"
+         class="acm-btn">LinkedIn</a>
+       <a href="mailto:azsxt5@mst.edu"
+        class="acm-btn">Email</a>
+      </div>
+      </div>
+    </li>
+
+
+    <li class="cards__card">
+      <div class="card__image"
+       style="background-image: url({% static "home/img/officers/current/trevanlang.jpg" %})">
+      </div>
+
+      <div class="card__content">
+        <div class="card_heading">
+          <h3 class="card__name">Trevan Lang</h3>
+          <h5 class="card__titles">SIG-Game Chair</h5>
+        </div>
+        <div class="card__text">
+          Year - Sophomore<br>
+        </div>
+      <div class="card__links">
+       <!--<a href="https://www.linkedin.com/in/schoonoverkevin/"
+         class="acm-btn">LinkedIn</a>-->
+       <a href="mailto:txlm4d@mst.edu"
+        class="acm-btn">Email</a>
+      </div>
+      </div>
+    </li>
+
+    <li class="cards__card">
+      <div class="card__image"
+       style="background-image: url({% static "home/img/officers/current/luisocampo.jpg" %})">
+      </div>
+
+      <div class="card__content">
+        <div class="card_heading">
+          <h3 class="card__name">Luis Ocampo</h3>
+          <h5 class="card__titles">SIG-Hack Co-chair</h5>
+        </div>
+        <div class="card__text">
+          Year - Junior<br>
+        </div>
+      <div class="card__links">
+       <a href="https://www.linkedin.com/in/luismocampo/"
+         class="acm-btn">LinkedIn</a>
+       <a href="mailto:lmo3cc@mst.edu"
+        class="acm-btn">Email</a>
+      </div>
+      </div>
+    </li>
+
+		<li class="cards__card">
+      <div class="card__image"
+       style="background-image: url({% static "home/img/officers/current/chrisgu.jpg" %})">
+      </div>
+
+      <div class="card__content">
+        <div class="card_heading">
+          <h3 class="card__name">Christopher Gu</h3>
+          <h5 class="card__titles">SIG-Hack Co-chair</h5>
+        </div>
+        <div class="card__text">
+          Year - Junior<br>
+        </div>
+      <div class="card__links">
+       <a href="https://www.linkedin.com/in/christopherlgu/"
+         class="acm-btn">LinkedIn</a>
+       <a href="mailto:clg2n4@mst.edu"
+        class="acm-btn">Email</a>
+      </div>
+      </div>
+    </li>
+
+    <li class="cards__card">
+      <div class="card__image"
+       style="background-image: url({% static "home/img/officers/current/tanners.png" %})">
+      </div>
+
+      <div class="card__content">
+        <div class="card_heading">
+          <h3 class="card__name">Tanner Stephens</h3>
+          <h5 class="card__titles">SIG-Security Chair</h5>
+        </div>
+        <div class="card__text">
+          Year - Junior<br>
+        </div>
+      <div class="card__links">
+       <a href="https://www.linkedin.com/in/tanner-stephens-ab8782a3/"
+         class="acm-btn">LinkedIn</a>
+       <a href="mailto:trsxw8@mst.edu"
+        class="acm-btn">Email</a>
+      </div>
+      </div>
+    </li>
+
+		{# Below should expand and make more info about past officers appear #}
+   </ul>
   </div>
  </main>
 {% endblock %}
