Update sponsorship page for 2018 sponsors

--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -24,14 +24,13 @@
                    target="_top">acm@mst.edu</a> to become one!</h2>
     </div>
 
-
     <div class="content-wrapper">
       <ul class="cards">
         <li class="cards__card">
             <a href="http://tradebot.com/" class="card__link">
             <div class="card__image contain"
                  style="background-image: url({% static "home/img/sponsors/tradebot_logo.png" %});"></div>
-              <h5 class="card__title">Tradebot | Sponsor</h5>
+              <h5 class="card__title">Tradebot</h5>
               </a>
               <p class="card__text">Tradebot Systems, Inc. is one of the largest
                 high-frequency, computer trading firms in the US. Based in
@@ -43,7 +42,7 @@
           <a href="https://www.garmin.com/" class="card__link">
             <div class="card__image"
                  style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %});"></div>
-              <h5 class="card__title">Garmin | Benefactor</h5>
+              <h5 class="card__title">Garmin</h5>
               </a>
               <p class="card__text">Garmin Ltd. (shortened to Garmin) is an
                 American multinational technology company known for its
@@ -52,7 +51,7 @@
                 utilities.</p>
         </li>
 
-        <li class="cards__card">
+        <!--<li class="cards__card">
           <a href="https://bats.com/" class="card__link">
             <div class="card__image contain"
                  style="background-image: url({% static "home/img/sponsors/bats-logo.png" %});"></div>
@@ -63,13 +62,13 @@
             Lenexa, Kansas. Currently, Bats is the second-largest U.S. equities
             market operator and operates in both the U.S. and European markets.
           </p>
-        </li>
+        </li>--!>
 
         <li class="cards__card">
           <a href="https://www.up.com/" class="card__link">
               <div class="card__image contain"
                    style="background-image: url({% static "home/img/sponsors/up-square-logo.png" %});"></div>
-              <h5 class="card__title">Union Pacific | Donor</h5>
+              <h5 class="card__title">Union Pacific</h5>
           </a>
           <p class="card__text">
             Union Pacific Railroad is North America's premier railroad
