Update officers page to address edits

--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -110,7 +110,7 @@
 
     <li class="cards__card">
      <div class="card__image"
-      style="background-image: url({% static "home/img/core/acm.png" %})">
+      style="background-image: url({% static "home/img/officers/current/StevenGiangreco.jpg" %})">
      </div>
      <div class="card__content">
        <div class="card_heading">
@@ -144,8 +144,8 @@
           Year - Senior<br>
         </div>
         <div class="card__links">
-          <!--<a href="https://www.linkedin.com/in/schoonoverkevin/"
-           class="acm-btn">LinkedIn</a>-->
+          <a href="https://www.linkedin.com/in/seth-kitchen-ba1116a3/"
+           class="acm-btn">LinkedIn</a>
           <a href="mailto:sjkyv5@mst.edu" class="acm-btn">Email</a>
         </div>
       </div>
@@ -229,7 +229,7 @@
           <h5 class="card__titles">SIG-Hack Co-chair</h5>
         </div>
         <div class="card__text">
-          Year - Junior<br>
+          Year - Sophomore<br>
         </div>
       <div class="card__links">
        <a href="https://www.linkedin.com/in/luismocampo/"
@@ -273,7 +273,7 @@
           <h5 class="card__titles">SIG-Security Chair</h5>
         </div>
         <div class="card__text">
-          Year - Junior<br>
+          Year - Senior<br>
         </div>
       <div class="card__links">
        <a href="https://www.linkedin.com/in/tanner-stephens-ab8782a3/"
