Update sigcomp link to link to their website

--- a/ACM_General/home/templates/home/sigs.html
+++ b/ACM_General/home/templates/home/sigs.html
@@ -38,7 +38,7 @@
               (https://open.kattis.com/) and UVA (https://uva.onlinejudge.org/).
               We also hold our own programming contests on campus where people
               can win the admiration of their peers and some great prizes.</p>
-              <a href="https://discord.gg/ayjGE9t" class="card__discord-link">Discord</a>
+              <a href="https://sigcomp.github.io/" class="card__discord-link">Website</a>
         </li>
         <li class="cards__card">
           <a href="https://modata.blog" class="card__link">
