Add new treasurer and sig-comp chair to website

--- a/ACM_General/home/templates/home/officers.html
+++ b/ACM_General/home/templates/home/officers.html
@@ -87,22 +87,21 @@
 
     <li class="cards__card">
      <div class="card__image"
-      style="background-image: url({% static "home/img/officers/current/HenryWong.jpg" %})">
+      style="background-image: url({% static "home/img/officers/current/David_Gardiner.jpeg" %})">
      </div>
      <div class="card__content">
        <div class="card_heading">
-        <h3 class="card__name">Henry Wong</h3>
-        <h5 class="card__titles">Treasurer</h5>
-        <h5 class="card__titles">SIG-Data Chair</h5>
-      </div>
+         <h3 class="card__name">David Gardiner</h3>
+         <h5 class="card__titles">Treasurer</h5>
+       </div>
       <div class="card__text">
-       Year - Junior<br>
+       Year - Senior<br>
        {# TODO: make this start of service and put like august, 2014 #}
       </div>
       <div class="card__links">
-       <a href="https://www.linkedin.com/in/henrycwong/"
-         class="acm-btn">LinkedIn</a>
-       <a href="mailto:hcwqk7@mst.edu"
+       <a href="https://www.linkedin.com/in/david-m-gardiner/"
+        class="acm-btn">LinkedIn</a>
+       <a href="mailto:dgn24@mst.edu"
         class="acm-btn">Email</a>
       </div>
      </div>
@@ -152,47 +151,47 @@
     </li>
 
     <li class="cards__card">
+      <div class="card__image"
+       style="background-image: url({% static "home/img/officers/current/jackmanhardt.jpg" %})">
+      </div>
+
+      <div class="card__content">
+        <div class="card_heading">
+          <h3 class="card__name">Jack Manhardt</h3>
+          <h5 class="card__titles">SIG-Competition Chair</h5>
+        </div>
+        <div class="card__text">
+          Year - Freshman<br>
+        </div>
+      <div class="card__links">
+       <a href="https://linkedin.com/in/jackmanhardt"
+         class="acm-btn">LinkedIn</a>
+       <a href="mailto:jmmbbv@mst.edu"
+        class="acm-btn">Email</a>
+      </div>
+      </div>
+    </li>
+
+    <li class="cards__card">
      <div class="card__image"
-      style="background-image: url({% static "home/img/officers/current/loungechair.jpg" %})">
+      style="background-image: url({% static "home/img/officers/current/HenryWong.jpg" %})">
      </div>
      <div class="card__content">
        <div class="card_heading">
-        <h3 class="card__name">Cody Roberts</h3>
-        <h5 class="card__titles">Event Coordinator</h5>
+        <h3 class="card__name">Henry Wong</h3>
+        <h5 class="card__titles">SIG-Data Chair</h5>
       </div>
       <div class="card__text">
        Year - Junior<br>
        {# TODO: make this start of service and put like august, 2014 #}
       </div>
       <div class="card__links">
-       <!--<a href="https://www.linkedin.com/in/eric-michalak-400907137/"
-         class="acm-btn">LinkedIn</a>-->
-       <a href="mailto:cargy9@mst.edu"
+       <a href="https://www.linkedin.com/in/henrycwong/"
+         class="acm-btn">LinkedIn</a>
+       <a href="mailto:hcwqk7@mst.edu"
         class="acm-btn">Email</a>
       </div>
      </div>
-    </li>
-
-    <li class="cards__card">
-      <div class="card__image"
-       style="background-image: url({% static "home/img/officers/current/arisherman.jpg" %})">
-      </div>
-
-      <div class="card__content">
-        <div class="card_heading">
-          <h3 class="card__name">Ari Sherman</h3>
-          <h5 class="card__titles">SIG-Competition Chair</h5>
-        </div>
-        <div class="card__text">
-          Year - Senior<br>
-        </div>
-      <div class="card__links">
-       <a href="http://linkedin.com/in/ari-sherman"
-         class="acm-btn">LinkedIn</a>
-       <a href="mailto:azsxt5@mst.edu"
-        class="acm-btn">Email</a>
-      </div>
-      </div>
     </li>
 
 
