Update sigcomp discord link

--- a/ACM_General/home/templates/home/sigs.html
+++ b/ACM_General/home/templates/home/sigs.html
@@ -26,7 +26,7 @@
     <div class="content-wrapper">
       <ul class="cards">
         <li class="cards__card">
-          <a href="https://discord.gg/ayjGE9t" class="card__link">
+          <a href="https://discord.gg/4t954Ad" class="card__link">
             <div class="card__image"
                  style="background-image: url({% static "home/img/sigs/sigcomp-logo.svg" %}); background-size: contain;"></div>
               <h5 class="card__title">SIG-Competition</h5>
